# terraform-google-cloud

./: .gitignore  README.md
.github/workflows/: build.yaml  claude-auto-review.yaml  deploy.yml
cloud-run-service/: README.md
cloud-run-service/app/: .dockerignore  .env.example  Dockerfile  Makefile  README.md  main.py  pyproject.toml
cloud-run-service/app/service/: bq_subscription.py  firestore.py  pubsub.py
cloud-run-service/app/utils/: encode.py
cloud-run-service/job/: .dockerignore  Dockerfile  Makefile  main.py  pyproject.toml
dev/: .terraform.lock.hcl  backend.tf  bigquery.tf  cloudrun.tf  pubsub.tf  registry.tf  storage.tf  variables.tf
dev/query/: insert_coupon_usage.sql
terraform/: bigquery.tf  cloudrun.tf  firestore.tf  github-actions-sa.tf  gke.tf  iam.tf  insert_coupon_usage.sql  main.tf  monitoring.tf  pubsub.tf  schedule.tf  variables.tf  vpc.tf
terraform/env/dev/: .terraform.lock.hcl  main.tf
terraform/modules/artifact_registry/: main.tf  output.tf
terraform/modules/bigquery/: main.tf  output.tf
terraform/modules/bigquery_data_transfer/: main.tf  output.tf  variables.tf
terraform/modules/cloud_run/: main.tf  output.tf  variables.tf
terraform/modules/cloud_sql/: main.tf
terraform/modules/firestore/: output.tf
terraform/modules/gcs/: main.tf  output.tf
terraform/modules/gke/: main.tf  variables.tf
terraform/modules/iam/: main.tf  output.tf  variables.tf
terraform/modules/monitoring/: main.tf  variables.tf
terraform/modules/pubsub/: main.tf  output.tf  variables.tf
terraform/modules/scheduler/: main.tf  variables.tf
(+4 files in other folders)
